fix: updated UI library version to get access to the new menu-item-z-index variable.

--- a/assets/global.css
+++ b/assets/global.css
@@ -30,6 +30,7 @@
   --color-disabled-1: #252525;
   --color-disabled-2: #424242;
   --color-shadow: #00000026;
+  --menu-item-z-index: 10;
 }
 /** DARK THEME START **/
 
